Allow copying vertex data to a buffer instead of a display list

--- a/include/cybergarage/x3d/Makefile.am
+++ b/include/cybergarage/x3d/Makefile.am
@@ -61,6 +61,7 @@ libcx3d_HEADERS = \
 	Geometry2DNode.h \
 	Geometry3DNode.h \
 	GeometryNode.h \
+	GeometryRenderInfo.h \
 	Graphic3D.h \
 	GroupNode.h \
 	Grouping2DNode.h \
