Begin adding IndexedTriangleSetNode

--- a/include/cybergarage/x3d/Makefile.am
+++ b/include/cybergarage/x3d/Makefile.am
@@ -69,6 +69,7 @@ libcx3d_HEADERS = \
 	ImageTextureNode.h \
 	IndexedFaceSetNode.h \
 	IndexedLineSetNode.h \
+	IndexedTriangleSetNode.h \
 	InfoNode.h \
 	InlineNode.h \
 	IntegerSequencerNode.h \
