--- a/configure.in
+++ b/configure.in
@@ -71,7 +71,7 @@ AM_CONDITIONAL(DEBUG, test x$debug = xtrue)
 ############################## 
 # Checks for Tiny OBJ Loader libraries.
 ############################## 
-
+AC_LANG_PUSH(C++)
 AC_ARG_ENABLE(obj,
     [ --enable-obj enable OBJ [default=yes]],
     [
@@ -88,6 +88,7 @@ if test "$check_obj" = "yes"; then
 AC_CHECK_HEADERS([tiny_obj_loader.h],[AC_DEFINE([CX3D_SUPPORT_OBJ],1,[OBJ])],[AC_MSG_RESULT(no)])
 AC_CHECK_LIB(tinyobjloader,main)
 fi
+AC_LANG_POP(C++)
 
 ############################## 
 # Checks for Xerces libraries.
