--- a/include/cybergarage/x3d/Makefile.am
+++ b/include/cybergarage/x3d/Makefile.am
@@ -29,6 +29,7 @@ libcx3d_HEADERS = \
 	ColorInterpolatorNode.h \
 	ColorNode.h \
 	ColorRGBANode.h \
+	CommonSurfaceShaderNode.h \
 	ComposedGeometryNode.h \
 	ConeNode.h \
 	CoordinateInterpolator2DNode.h \
